--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ ark-ff = "0.4.2"
 ark-poly = "0.4.2"
 ark-serialize = { version = "0.4.2", features = ["derive"] }
 rand = "0.8.5"
+sha2 = "0.10.8"
 zeroize = { version = "1.8.1", features = ["derive"] }
 
 
